--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -28,6 +28,9 @@ dependencies:
   dropdown_formfield: ^0.1.3
   modal_progress_hud: ^0.1.3
   collection: ^1.14.13
+  cool_alert: ^1.0.1
+  flutter_spinkit: ^4.1.2+1
+  email_validator: ^1.0.6
 
 dev_dependencies:
   flutter_test:
