--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -14,11 +14,12 @@ dependencies:
   firebase_core: 0.5.0
   firebase_auth: ^0.18.0+1
   cloud_firestore: ^0.14.1+1
+  google_sign_in: ^4.5.4
   google_fonts: ^1.1.0
   font_awesome_flutter: ^8.8.1
   contacts_service: ^0.4.6
   permission_handler: ^5.0.1+1
-  flutter_snake_navigationbar: ^0.4.0+1
+  flutter_snake_navigationbar: ^0.4.1+2
   flutter_login: ^1.0.14
   sliver_fab: ^1.0.0
   flip_card: ^0.4.4
@@ -32,6 +33,12 @@ dependencies:
   flutter_spinkit: ^4.1.2+1
   email_validator: ^1.0.6
   shared_preferences: ^0.5.12
+  flutter_keyboard_visibility: ^3.2.2
+  qr_flutter: ^3.2.0
+  qrscan: ^0.2.17
+  url_launcher: ^5.7.6
+  razorpay_flutter: ^1.2.2
+  fluttertoast: ^7.1.1
 
 dev_dependencies:
   flutter_test:
