--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -32,13 +32,11 @@ dependencies:
   cool_alert: ^1.0.1
   flutter_spinkit: ^4.1.2+1
   email_validator: ^1.0.6
-  shared_preferences: ^0.5.12
-  flutter_keyboard_visibility: ^3.2.2
   qr_flutter: ^3.2.0
   qrscan: ^0.2.17
   url_launcher: ^5.7.6
-  razorpay_flutter: ^1.2.2
-  fluttertoast: ^7.1.1
+  shared_preferences: ^0.5.12+2
+  introduction_screen: ^1.0.9
 
 dev_dependencies:
   flutter_test:
